Update Angular dependencies and versions in package.json
Bumped Angular dependencies and versions for consistency and compatibility with other packages. This change ensures smoother integration and enhanced performance.

Issue: #123

--- a/package.json
+++ b/package.json
@@ -1,140 +1,140 @@
 {
-	"name": "3d-inventory-angular-ui",
-	"version": "0.3.44",
-	"private": true,
-	"browser": {
-		"fs": false,
-		"path": false,
-		"os": false,
-		"buffer": false,
-		"process": false
-	},
-	"scripts": {
-		"api": "cd ../3d-inventory-mongo-api && npm run start",
-		"build": "ng build 3d-inventory-angular-ui",
-		"clear:all": "npm run clear:cache && npm run clear:dist && npm run clear:node_install",
-		"clear:cache": "rm -rf .angular/cache",
-		"clear:dist": "rm -rf dist",
-		"clear:node_install": "rm -rf node_modules",
-		"compodoc:build": "compodoc -p tsconfig.doc.json",
-		"compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
-		"compodoc:serve": "compodoc -s",
-		"cp": "cp -f README.md src/assets",
-		"github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
-		"github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
-		"podman:build": "podman build -t 3d-inventory:0.1 .",
-		"podman:clear": "podman rmi --all --force",
-		"podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
-		"podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
-		"prettier": "prettier --check src/**/*.ts",
-		"server:json": "cd backend && json-server --watch db_v2.json",
-		"server:kill": "killall \"ng serve\"",
-		"server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
-		"server:ng": "npm run cp && ng serve --host 0.0.0.0 --watch",
-		"server:run": "npm run cp && ng build --watch",
-		"start": "npm run server:ng",
-		"test": "ng test",
-		"test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-		"update": "npm-check-updates -u && npm update && npm upgrade"
-	},
-	"lint-staged": {
-		"**/*": "prettier --write --ignore-unknown"
-	},
-	"dependencies": {
-		"@angular-eslint/eslint-plugin": "^17.2.1",
-		"@angular/animations": "^17.2.4",
-		"@angular/common": "^17.2.4",
-		"@angular/compiler": "^17.2.4",
-		"@angular/core": "^17.2.4",
-		"@angular/forms": "^17.2.4",
-		"@angular/platform-browser": "^17.2.4",
-		"@angular/platform-browser-dynamic": "^17.2.4",
-		"@angular/platform-server": "^17.2.4",
-		"@angular/router": "^17.2.4",
-		"@aws-amplify/cli": "^12.10.2",
-		"@compodoc/compodoc": "^1.1.23",
-		"@faker-js/faker": "^8.4.1",
-		"@ng-bootstrap/ng-bootstrap": "^16.0.0",
-		"@types/lodash": "^4.14.202",
-		"bootstrap": "^5.3.3",
-		"bootstrap-icons": "^1.11.3",
-		"chalk": "^5.3.0",
-		"cors": "^2.8.5",
-		"date-fns": "^3.3.1",
-		"depcheck": "^1.4.7",
-		"express": "^4.18.3",
-		"https-browserify": "^1.0.0",
-		"install": "^0.13.0",
-		"jquery": "^3.7.1",
-		"jsdom": "^24.0.0",
-		"json-server": "^0.17.4",
-		"karma-cli": "^2.0.0",
-		"karma-typescript": "^5.5.4",
-		"lodash": "^4.17.21",
-		"mkdirp": "^3.0.1",
-		"nav-bar": "^1.0.3",
-		"ngx-bootstrap": "^12.0.0",
-		"ngx-markdown": "^17.1.1",
-		"ngx-pagination": "^6.0.3",
-		"node-gyp": "^10.0.1",
-		"node-sass": "^9.0.0",
-		"npm-check-updates": "^16.14.15",
-		"path-browserify": "^1.0.1",
-		"prismjs": "^1.29.0",
-		"process": "^0.11.10",
-		"rimraf": "^5.0.5",
-		"rxjs": "~7.8.1",
-		"three": "^0.162.0",
-		"three-orbitcontrols-ts": "^0.1.2",
-		"ts-sync-request": "^1.4.1",
-		"tslib": "^2.6.2",
-		"winston": "^3.12.0",
-		"zone.js": "^0.14.4"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^17.2.3",
-		"@angular/cli": "^17.2.3",
-		"@angular/compiler-cli": "^17.2.4",
-		"@angular/localize": "^17.2.4",
-		"@types/cors": "^2.8.17",
-		"@types/eslint": "^8.56.5",
-		"@types/eslint-config-prettier": "^6.11.3",
-		"@types/express": "^4.17.21",
-		"@types/jasmine": "~5.1.4",
-		"@types/jquery": "^3.5.29",
-		"@types/json-server": "^0.14.7",
-		"@types/karma-coverage": "^2.0.3",
-		"@types/karma-jasmine": "^4.0.5",
-		"@types/karma-jsdom-launcher": "^8.0.5",
-		"@types/node": "^20.11.25",
-		"@types/node-sass": "^4.11.7",
-		"@types/path-browserify": "^1.0.2",
-		"@types/prismjs": "^1.26.3",
-		"@types/three": "^0.162.0",
-		"@types/uuid": "^9.0.8",
-		"@typescript-eslint/eslint-plugin": "^7.1.1",
-		"@typescript-eslint/parser": "^7.1.1",
-		"angular-cli-ghpages": "^1.0.7",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-config-standard": "17.1.0",
-		"eslint-plugin-import": "2.29.1",
-		"eslint-plugin-node": "11.1.0",
-		"jasmine-core": "~5.1.2",
-		"karma": "~6.4.3",
-		"karma-coverage": "~2.2.1",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.1.0",
-		"karma-jsdom-launcher": "^17.0.0",
-		"lil-gui": "^0.19.2",
-		"lint-staged": "^15.2.2",
-		"lite-server": "^2.6.1",
-		"ng-packagr": "^17.2.1",
-		"nyc": "^15.1.0",
-		"prettier": "3.2.5",
-		"three": "^0.162.0",
-		"typescript": "<=5.4.0",
-		"unique-names-generator": "^4.7.1",
-		"uuid": "^9.0.1"
-	}
+  "name": "3d-inventory-angular-ui",
+  "version": "0.3.49",
+  "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "buffer": false,
+    "process": false
+  },
+  "scripts": {
+    "api": "cd ../3d-inventory-mongo-api && npm run start",
+    "build": "ng build 3d-inventory-angular-ui",
+    "clear:all": "npm run clear:cache && npm run clear:dist && npm run clear:node_install",
+    "clear:cache": "rm -rf .angular/cache",
+    "clear:dist": "rm -rf dist",
+    "clear:node_install": "rm -rf node_modules",
+    "compodoc:build": "compodoc -p tsconfig.doc.json",
+    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
+    "compodoc:serve": "compodoc -s",
+    "cp": "cp -f README.md src/assets",
+    "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
+    "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
+    "podman:build": "podman build -t 3d-inventory:0.1 .",
+    "podman:clear": "podman rmi --all --force",
+    "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
+    "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
+    "prettier": "prettier --check src/**/*.ts",
+    "server:json": "cd backend && json-server --watch db_v2.json",
+    "server:kill": "killall \"ng serve\"",
+    "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
+    "server:ng": "npm run cp && ng serve --host 0.0.0.0 --watch",
+    "server:run": "npm run cp && ng build --watch",
+    "start": "npm run server:ng",
+    "test": "ng test",
+    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
+    "update": "npm-check-updates -u && npm update && npm upgrade"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "@angular-eslint/eslint-plugin": "^17.2.1",
+    "@angular/animations": "^17.2.3",
+    "@angular/common": "^17.2.3",
+    "@angular/compiler": "^17.2.3",
+    "@angular/core": "^17.2.3",
+    "@angular/forms": "^17.2.3",
+    "@angular/platform-browser": "^17.2.3",
+    "@angular/platform-browser-dynamic": "^17.2.3",
+    "@angular/platform-server": "^17.2.3",
+    "@angular/router": "^17.2.3",
+    "@aws-amplify/cli": "^12.10.1",
+    "@compodoc/compodoc": "^1.1.23",
+    "@faker-js/faker": "^8.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@types/lodash": "^4.14.202",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "chalk": "^5.3.0",
+    "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
+    "depcheck": "^1.4.7",
+    "express": "^4.18.3",
+    "https-browserify": "^1.0.0",
+    "install": "^0.13.0",
+    "jquery": "^3.7.1",
+    "jsdom": "^24.0.0",
+    "json-server": "^0.17.4",
+    "karma-cli": "^2.0.0",
+    "karma-typescript": "^5.5.4",
+    "lodash": "^4.17.21",
+    "mkdirp": "^3.0.1",
+    "nav-bar": "^1.0.3",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-markdown": "^17.1.1",
+    "ngx-pagination": "^6.0.3",
+    "node-gyp": "^10.0.1",
+    "node-sass": "^9.0.0",
+    "npm-check-updates": "^16.14.15",
+    "path-browserify": "^1.0.1",
+    "prismjs": "^1.29.0",
+    "process": "^0.11.10",
+    "rimraf": "^5.0.5",
+    "rxjs": "~7.8.1",
+    "three": "^0.162.0",
+    "three-orbitcontrols-ts": "^0.1.2",
+    "ts-sync-request": "^1.4.1",
+    "tslib": "^2.6.2",
+    "winston": "^3.12.0",
+    "zone.js": "^0.14.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^17.2.2",
+    "@angular/cli": "^17.2.2",
+    "@angular/compiler-cli": "^17.2.3",
+    "@angular/localize": "^17.2.3",
+    "@types/cors": "^2.8.17",
+    "@types/eslint": "^8.56.5",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/express": "^4.17.21",
+    "@types/jasmine": "~5.1.4",
+    "@types/jquery": "^3.5.29",
+    "@types/json-server": "^0.14.7",
+    "@types/karma-coverage": "^2.0.3",
+    "@types/karma-jasmine": "^4.0.5",
+    "@types/karma-jsdom-launcher": "^8.0.5",
+    "@types/node": "^20.11.24",
+    "@types/node-sass": "^4.11.7",
+    "@types/path-browserify": "^1.0.2",
+    "@types/prismjs": "^1.26.3",
+    "@types/three": "^0.162.0",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "angular-cli-ghpages": "^1.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-node": "11.1.0",
+    "jasmine-core": "~5.1.2",
+    "karma": "~6.4.3",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-jsdom-launcher": "^17.0.0",
+    "lil-gui": "^0.19.2",
+    "lint-staged": "^15.2.2",
+    "lite-server": "^2.6.1",
+    "ng-packagr": "^17.2.1",
+    "nyc": "^15.1.0",
+    "prettier": "3.2.5",
+    "three": "^0.161.0",
+    "typescript": "^5.2.0",
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^9.0.1"
+  }
 }
