--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.49",
+  "version": "0.3.50",
   "private": true,
   "browser": {
     "fs": false,
@@ -22,6 +22,7 @@
     "cp": "cp -f README.md src/assets",
     "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
     "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
+    "lint": "eslint src",
     "podman:build": "podman build -t 3d-inventory:0.1 .",
     "podman:clear": "podman rmi --all --force",
     "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
@@ -37,21 +38,31 @@
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "update": "npm-check-updates -u && npm update && npm upgrade"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": [
+        "npm run lint",
+        "lint-staged",
+        "prettier --write . ",
+        "git add -A ."
+      ]
+    }
+  },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@angular-eslint/eslint-plugin": "^17.2.1",
-    "@angular/animations": "^17.2.3",
-    "@angular/common": "^17.2.3",
-    "@angular/compiler": "^17.2.3",
-    "@angular/core": "^17.2.3",
-    "@angular/forms": "^17.2.3",
-    "@angular/platform-browser": "^17.2.3",
-    "@angular/platform-browser-dynamic": "^17.2.3",
-    "@angular/platform-server": "^17.2.3",
-    "@angular/router": "^17.2.3",
-    "@aws-amplify/cli": "^12.10.1",
+    "@angular/animations": "^17.2.4",
+    "@angular/common": "^17.2.4",
+    "@angular/compiler": "^17.2.4",
+    "@angular/core": "^17.2.4",
+    "@angular/forms": "^17.2.4",
+    "@angular/platform-browser": "^17.2.4",
+    "@angular/platform-browser-dynamic": "^17.2.4",
+    "@angular/platform-server": "^17.2.4",
+    "@angular/router": "^17.2.4",
+    "@aws-amplify/cli": "^12.10.2",
     "@compodoc/compodoc": "^1.1.23",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
@@ -92,10 +103,10 @@
     "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.2",
-    "@angular/cli": "^17.2.2",
-    "@angular/compiler-cli": "^17.2.3",
-    "@angular/localize": "^17.2.3",
+    "@angular-devkit/build-angular": "^17.2.3",
+    "@angular/cli": "^17.2.3",
+    "@angular/compiler-cli": "^17.2.4",
+    "@angular/localize": "^17.2.4",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.5",
     "@types/eslint-config-prettier": "^6.11.3",
@@ -106,7 +117,7 @@
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.11.25",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.3",
@@ -132,8 +143,8 @@
     "ng-packagr": "^17.2.1",
     "nyc": "^15.1.0",
     "prettier": "3.2.5",
-    "three": "^0.161.0",
-    "typescript": "^5.2.0",
+    "three": "^0.162.0",
+    "typescript": "<=5.4.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1"
   }
