Refactor import statements and error handling in AttributeService
Improve readability by organizing and refining import statements. Enhance error handling to provide detailed logging for easier debugging. This change focuses on code organization and error insight.

Refactor import statements and error handling in AttributeService

Organize imports and enhance error handling for improved readability and debugging. This refactor focuses on code organization and error insight.

--- a/package.json
+++ b/package.json
@@ -16,23 +16,27 @@
     "clear:cache": "rm -rf .angular/cache",
     "clear:dist": "rm -rf dist",
     "clear:node_install": "rm -rf node_modules",
-    "compodoc:build": "compodoc -p tsconfig.doc.json",
+    "compodoc": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
     "cp": "cp -f README.md src/assets",
     "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
     "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
-    "lint": "eslint src",
+    "kill-ng-serve": "killall \"ng serve\"",
+    "kill-port-usage-4200": "kill -s 9 `lsof -nP -iTCP:4200 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
+    "kill-port-usage-8080": "kill -s 9 `lsof -nP -iTCP:8080 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
+    "lint:eslint": "eslint --fix src",
+    "lint:prettier": "prettier --write src/**/*.ts",
+    "nvm": "nvm list && nvm ls-remote",
+    "nvm-update": "nvm ls-remote && nvm install-latest-npm",
     "podman:build": "podman build -t 3d-inventory:0.1 .",
     "podman:clear": "podman rmi --all --force",
     "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
     "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
-    "pre-commit": "lint-staged && npm run lint && npm run prettier && git add -A .",
-    "prettier": "prettier --write src/**/*.ts",
+    "pre-commit": "lint-staged",
     "server:json": "cd backend && json-server --watch db_v2.json",
-    "server:kill": "killall \"ng serve\"",
     "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
-    "server:ng": "npm run cp && ng serve --host 0.0.0.0 --watch",
+    "server:ng": "npm run cp && ng serve --watch",
     "server:run": "npm run cp && ng build --watch",
     "start": "npm run server:ng",
     "test": "ng test",
@@ -45,7 +49,11 @@
     }
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "src/**/*.{ts,html}": [
+      "prettier --write --ignore-unknown src/**/*.ts",
+      "eslint --fix src",
+      "git add -A ."
+    ]
   },
   "dependencies": {
     "@angular-eslint/eslint-plugin": "^17.2.1",
@@ -67,7 +75,7 @@
     "bootstrap-icons": "^1.11.3",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.4.0",
     "depcheck": "^1.4.7",
     "express": "^4.18.3",
     "https-browserify": "^1.0.0",
@@ -113,14 +121,14 @@
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.26",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.3",
     "@types/three": "^0.162.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "angular-cli-ghpages": "^1.0.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
@@ -140,7 +148,7 @@
     "nyc": "^15.1.0",
     "prettier": "3.2.5",
     "three": "^0.162.0",
-    "typescript": "<=5.4.0",
+    "typescript": "<5.4.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1"
   }
