--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,9 +42,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/protractor/bin/protractor",
-      "args": [
-        "${workspaceFolder}/e2e/protractor.conf.js"
-      ]
+      "args": ["${workspaceFolder}/e2e/protractor.conf.js"]
     }
   ]
 }
