--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,5 @@
 {
-  "cSpell.words": [
-    "Abient",
-    "Interfance",
-    "nobezel",
-    "Objin",
-    "PDU",
-    "Phong",
-    "uuidv"
-  ],
+  "cSpell.words": ["Abient", "Interfance", "nobezel", "Objin", "PDU", "Phong", "uuidv"],
   "todo-tree.tree.showCountsInTree": true,
   "window.title": "${dirty} ${activeEditorMedium}",
   "[python]": {
