Refactor component names for clarity and consistency
Update component names from plural to singular for improved code readability and maintainability across various files.

--- a/package.json
+++ b/package.json
@@ -35,10 +35,8 @@
     "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
     "pre-commit": "lint-staged",
     "server:json": "cd backend && json-server --watch db_v2.json",
-    "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
-    "server:ng": "npm run cp && ng serve --watch",
     "server:run": "npm run cp && ng build --watch",
-    "start": "npm run server:ng",
+    "start": "npm run cp && ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "update": "npm-check-updates -u && npm update && npm upgrade"
@@ -66,11 +64,10 @@
     "@angular/platform-browser-dynamic": "^17.2.4",
     "@angular/platform-server": "^17.2.4",
     "@angular/router": "^17.2.4",
-    "@aws-amplify/cli": "^12.10.2",
     "@compodoc/compodoc": "^1.1.23",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash": "^4.17.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chalk": "^5.3.0",
