--- a/package.json
+++ b/package.json
@@ -47,9 +47,13 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{ts,html}": [
+    "src/**/*.{ts,js}": [
       "prettier --write --ignore-unknown src/**/*.ts",
-      "eslint --fix src",
+      "eslint --report-unused-disable-directives --config .eslintrc.json --fix src",
+      "git add -A ."
+    ],
+    "src/**/*.{html}": [
+      "prettier --write --ignore-unknown src/**/*.ts",
       "git add -A ."
     ]
   },
@@ -74,6 +78,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.4.0",
     "depcheck": "^1.4.7",
+    "eslint-scope": "^8.0.0",
     "express": "^4.18.3",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
@@ -128,7 +133,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "angular-cli-ghpages": "^1.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
