Refactor npm versioning, update dependencies, and optimize HTML structure
- Updated npm version commands for semantic versioning
- Enhanced dependency versions for Angular packages and utilities
- Improved HTML markup within the attribute-list component
- Minor adjustments to log component TypeScript imports

Issue: #123

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
-  "cSpell.words": ["Abient", "Interfance", "nobezel", "Objin", "PDU", "Phong", "uuidv"],
+  "cSpell.words": [
+    "Abient",
+    "Interfance",
+    "nobezel",
+    "Objin",
+    "PDU",
+    "Phong",
+    "uuidv"
+  ],
   "todo-tree.tree.showCountsInTree": true,
   "window.title": "${dirty} ${activeEditorMedium}",
   "[python]": {
