--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.51",
+  "version": "0.3.53",
   "private": true,
   "browser": {
     "fs": false,
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "api": "cd ../3d-inventory-mongo-api && npm run start",
-    "build": "ng build 3d-inventory-angular-ui",
+    "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui",
     "clear:all": "npm run clear:cache && npm run clear:dist && npm run clear:node_install",
     "clear:cache": "rm -rf .angular/cache",
     "clear:dist": "rm -rf dist",
@@ -34,9 +34,7 @@
     "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
     "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
     "pre-commit": "lint-staged",
-    "server:json": "cd backend && json-server --watch db_v2.json",
-    "server:run": "npm run cp && ng build --watch",
-    "start": "npm run cp && ng serve --watch",
+    "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "update": "npm-check-updates -u && npm update && npm upgrade"
@@ -52,22 +50,22 @@
       "eslint --report-unused-disable-directives --config .eslintrc.json --fix src",
       "git add -A ."
     ],
-    "src/**/*.{html}": [
+    "src/**/*.html": [
       "prettier --write --ignore-unknown src/**/*.ts",
       "git add -A ."
     ]
   },
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "^17.2.1",
-    "@angular/animations": "^17.2.4",
-    "@angular/common": "^17.2.4",
-    "@angular/compiler": "^17.2.4",
-    "@angular/core": "^17.2.4",
-    "@angular/forms": "^17.2.4",
-    "@angular/platform-browser": "^17.2.4",
-    "@angular/platform-browser-dynamic": "^17.2.4",
-    "@angular/platform-server": "^17.2.4",
-    "@angular/router": "^17.2.4",
+    "@angular-eslint/eslint-plugin": "^17.3.0",
+    "@angular/animations": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/platform-server": "^17.3.0",
+    "@angular/router": "^17.3.0",
     "@compodoc/compodoc": "^1.1.23",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
@@ -76,7 +74,7 @@
     "bootstrap-icons": "^1.11.3",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
-    "date-fns": "^3.4.0",
+    "date-fns": "^3.5.0",
     "depcheck": "^1.4.7",
     "eslint-scope": "^8.0.0",
     "express": "^4.18.3",
@@ -84,7 +82,6 @@
     "install": "^0.13.0",
     "jquery": "^3.7.1",
     "jsdom": "^24.0.0",
-    "json-server": "^0.17.4",
     "karma-cli": "^2.0.0",
     "karma-typescript": "^5.5.4",
     "lodash": "^4.17.21",
@@ -95,7 +92,7 @@
     "ngx-pagination": "^6.0.3",
     "node-gyp": "^10.0.1",
     "node-sass": "^9.0.0",
-    "npm-check-updates": "^16.14.15",
+    "npm-check-updates": "^16.14.17",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
     "process": "^0.11.10",
@@ -109,21 +106,20 @@
     "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.3",
-    "@angular/cli": "^17.2.3",
-    "@angular/compiler-cli": "^17.2.4",
-    "@angular/localize": "^17.2.4",
+    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular/cli": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
+    "@angular/localize": "^17.3.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.5",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.29",
-    "@types/json-server": "^0.14.7",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.11.26",
+    "@types/node": "^20.11.28",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.3",
@@ -146,11 +142,11 @@
     "lil-gui": "^0.19.2",
     "lint-staged": "^15.2.2",
     "lite-server": "^2.6.1",
-    "ng-packagr": "^17.2.1",
+    "ng-packagr": "^17.3.0",
     "nyc": "^15.1.0",
     "prettier": "3.2.5",
     "three": "^0.162.0",
-    "typescript": "<5.4.0",
+    "typescript": "^5.4.2",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1"
   }
