Refactor directory structure and update Python formatting in vscode
Simplify directory exclusions, refine Python formatting settings,
and enhance color customizations in vscode settings for improved
development consistency and readability.

Refactor directory structure, update Python formatting, and enhance vscode settings

Simplify directory exclusions, refine Python formatting, and improve color customizations in vscode settings to achieve better development consistency and readability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,17 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "workbench.colorCustomizations": {
+    "badge.background": "#445691",
+    "statusBar.debuggingBackground": "#005f5f",
+    "statusBar.debuggingForeground": "#ffffff",
+    "statusBar.foreground": "#ffffff",
+    "statusBar.noFolderBackground": "#005f5f",
+    "tree.inactiveIndentGuidesStroke": "#571212",
+    "tree.indentGuidesStroke": "#3f793f",
+    "activityBar.background": "#262F36",
+    "titleBar.activeBackground": "#35414C",
+    "titleBar.activeForeground": "#F9FAFB"
+  }
 }
