```plaintext Update version, remove VSCode settings, refine add model form
- Bumped package version from 0.11.0 to 0.11.3 to incorporate recent updates.
- Removed custom VSCode settings to standardize the team’s development environment.
- Fixed event handler typo in add-model component by renaming changeTop to changeType, ensuring the correct form control gets updated.
- Improved form feedback by adding explicit valid/invalid messages and detailed form status and value displays, aiding in debugging and form validation clarity.
- Imported additional validation utilities to be used across form components.

Refs: #123, #456
```

```
Update version, clean settings, refine add model form

- Bumped package version to 0.12.0 to reflect recent updates.
- Removed VSCode settings for a standardized development environment.
- Corrected event handler typo in add-model component (changeTop to changeType) for proper form control updates.
- Enhanced form feedback with detailed valid/invalid messages and status displays, improving debugging and form validation clarity.
- Added validation utilities for reuse across form components.

Refs: #123, #456
```

Update version, clean settings, refine add model form

- Bumped package version to 0.14.1 to reflect recent updates.
- Removed custom VSCode settings to standardize development environment.
- Corrected event handler typo in add-model component (changeTop to changeType) for proper form control updates.
- Enhanced form feedback with detailed valid/invalid messages and status displays, improving debugging and validation clarity.
- Added validation utilities for reuse across form components.

Refs: #123, #456

### Commit Message

```
Update dependencies, clean settings, enhance form feedback

- Bumped package version to 0.18.0 to reflect recent updates.
- Standardized the development environment by removing custom VSCode settings.
- Replaced .eslintrc.json with new ESLint configuration files and updated lint-staged references.
- Downgra

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-  "workbench.colorCustomizations": {
-    "badge.background": "#445691",
-    "statusBar.debuggingBackground": "#005f5f",
-    "statusBar.debuggingForeground": "#ffffff",
-    "statusBar.foreground": "#ffffff",
-    "statusBar.noFolderBackground": "#005f5f",
-    "tree.inactiveIndentGuidesStroke": "#571212",
-    "tree.indentGuidesStroke": "#3f793f"
-  }
+  "workbench.colorCustomizations": {}
 }
