--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.11.0",
+  "version": "0.23.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -35,7 +35,8 @@
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm-check-updates -u && npm update && npm upgrade"
+    "update": "npm-check-updates -u && npm update && npm upgrade",
+    "a": " eslint --report-unused-disable-directives --config eslint.config.js --fix src"
   },
   "husky": {
     "hooks": {
@@ -45,7 +46,6 @@
   "lint-staged": {
     "src/**/*.{ts,js}": [
       "prettier --write --ignore-unknown src/**/*.ts",
-      "eslint --report-unused-disable-directives --config .eslintrc.json --fix src",
       "git add -A ."
     ],
     "src/**/*.html": [
@@ -54,15 +54,15 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^18.0.1",
-    "@angular/common": "^18.0.1",
-    "@angular/compiler": "^18.0.1",
-    "@angular/core": "^18.0.1",
-    "@angular/forms": "^18.0.1",
-    "@angular/platform-browser": "^18.0.1",
-    "@angular/platform-browser-dynamic": "^18.0.1",
-    "@angular/platform-server": "^18.0.1",
-    "@angular/router": "^18.0.1",
+    "@angular/animations": "^17.0.0",
+    "@angular/common": "^17.0.0",
+    "@angular/compiler": "^17.0.0",
+    "@angular/core": "^17.0.0",
+    "@angular/forms": "^17.0.0",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/platform-server": "^17.0.0",
+    "@angular/router": "^17.0.0",
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
@@ -85,7 +85,7 @@
     "mkdirp": "^3.0.1",
     "nav-bar": "^1.0.3",
     "ngx-bootstrap": "^12.0.0",
-    "ngx-markdown": "^18.0.0",
+    "ngx-markdown": "^17.0.0",
     "ngx-pagination": "^6.0.3",
     "node-gyp": "^10.1.0",
     "node-sass": "^9.0.0",
@@ -103,10 +103,13 @@
     "zone.js": "^0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.2",
-    "@angular/cli": "^18.0.2",
-    "@angular/compiler-cli": "^18.0.1",
-    "@angular/localize": "^18.0.1",
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
+    "@angular/localize": "^17.0.0",
+    "@eslint/compat": "^1.0.3",
+    "@eslint/eslintrc": "^3.1.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
     "@types/eslint-config-prettier": "^6.11.3",
@@ -122,10 +125,13 @@
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.165.0",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "angular-cli-ghpages": "^2.0.0",
-    "eslint": "^9.4.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "11.1.0",
+    "globals": "^15.3.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-coverage": "~2.2.1",
@@ -135,9 +141,9 @@
     "lil-gui": "^0.19.2",
     "lint-staged": "^15.2.5",
     "lite-server": "^2.6.1",
-    "ng-packagr": "^18.0.0",
+    "ng-packagr": "^17.0.0",
     "nyc": "^15.1.0",
-    "prettier": "3.2.5",
+    "prettier": "3.3.0",
     "three": "^0.165.0",
     "typescript": "^5.4.5",
     "unique-names-generator": "^4.7.1",
