--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.23.0",
+  "version": "0.24.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -36,7 +36,8 @@
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "update": "npm-check-updates -u && npm update && npm upgrade",
-    "a": " eslint --report-unused-disable-directives --config eslint.config.js --fix src"
+    "a": " eslint --report-unused-disable-directives --config eslint.config.js --fix src",
+    "lint": "ng lint"
   },
   "husky": {
     "hooks": {
@@ -54,19 +55,19 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/platform-server": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/animations": "^17.3.11",
+    "@angular/common": "^17.3.11",
+    "@angular/compiler": "^17.3.11",
+    "@angular/core": "^17.3.11",
+    "@angular/forms": "^17.3.11",
+    "@angular/platform-browser": "^17.3.11",
+    "@angular/platform-browser-dynamic": "^17.3.11",
+    "@angular/platform-server": "^17.3.11",
+    "@angular/router": "^17.3.11",
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.5",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chalk": "^5.3.0",
@@ -98,17 +99,21 @@
     "three": "^0.165.0",
     "three-orbitcontrols-ts": "^0.1.2",
     "ts-sync-request": "^1.4.1",
-    "tslib": "^2.6.2",
+    "tslib": "^2.6.3",
     "winston": "^3.13.0",
-    "zone.js": "^0.14.6"
+    "zone.js": "^0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
-    "@angular/localize": "^17.0.0",
-    "@eslint/compat": "^1.0.3",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-eslint/builder": "17.5.2",
+    "@angular-eslint/eslint-plugin": "17.5.2",
+    "@angular-eslint/eslint-plugin-template": "17.5.2",
+    "@angular-eslint/schematics": "17.5.2",
+    "@angular-eslint/template-parser": "17.5.2",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.11",
+    "@angular/localize": "^17.3.11",
+    "@eslint/compat": "^1.1.0",
     "@eslint/eslintrc": "^3.1.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
@@ -119,34 +124,34 @@
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.13.0",
+    "@types/node": "^20.14.2",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.165.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "angular-cli-ghpages": "^2.0.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
+    "angular-cli-ghpages": "^2.0.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^15.3.0",
+    "globals": "^15.4.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^17.0.0",
-    "lil-gui": "^0.19.2",
-    "lint-staged": "^15.2.5",
+    "lil-gui": "^0.19.npm 2",
+    "lint-staged": "^15.2.7",
     "lite-server": "^2.6.1",
     "ng-packagr": "^17.0.0",
-    "nyc": "^15.1.0",
-    "prettier": "3.3.0",
+    "nyc": "^17.0.0",
+    "prettier": "3.3.2",
     "three": "^0.165.0",
     "typescript": "^5.4.5",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.1"
+    "uuid": "^10.0.0"
   }
 }
