Refactor ESLint configuration and unify package versions
Adjust ESLint rules and update package dependencies for consistency.
Unify Angular-eslint plugin version for coherence across the project.

#ISSUE-123

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,18 @@
 {
+  "parserOptions": {
+    "ecmaVersion": 6
+  },
   "root": true,
   "ignorePatterns": [
-    "projects/**/*"
+    "node_modules/**/*",
+    "documentation/**/*",
+    ".git/**/*",
+    "dist/**/*"
   ],
   "overrides": [
     {
       "files": [
-        "*.ts"
+        "./**/*.ts"
       ],
       "extends": [
         "eslint:recommended",
