--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.24.0",
+  "version": "0.25.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -47,6 +47,7 @@
   "lint-staged": {
     "src/**/*.{ts,js}": [
       "prettier --write --ignore-unknown src/**/*.ts",
+      "eslint --fix src",
       "git add -A ."
     ],
     "src/**/*.html": [
@@ -106,8 +107,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular-eslint/builder": "17.5.2",
-    "@angular-eslint/eslint-plugin": "17.5.2",
-    "@angular-eslint/eslint-plugin-template": "17.5.2",
+    "@angular-eslint/eslint-plugin": "^17.5.2",
+    "@angular-eslint/eslint-plugin-template": "^17.5.2",
     "@angular-eslint/schematics": "17.5.2",
     "@angular-eslint/template-parser": "17.5.2",
     "@angular/cli": "^17.3.8",
@@ -130,8 +131,8 @@
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.165.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "7.13.0",
-    "@typescript-eslint/parser": "7.13.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "angular-cli-ghpages": "^2.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -143,7 +144,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^17.0.0",
-    "lil-gui": "^0.19.npm 2",
+    "lil-gui": "^0.19.2",
     "lint-staged": "^15.2.7",
     "lite-server": "^2.6.1",
     "ng-packagr": "^17.0.0",
