Refactor HTML templates and Angular component imports - Reorganize HTML template structure and optimize Angular imports. Improve code readability, maintainability, and consistency. Enhances development efficiency and reduces potential errors. (No issue references)

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,9 @@
 ﻿# Ignore artifacts:
-build/*
-coverage/*
-.angular/*
-.husky
-.vscode
-dist
-node_modules
-documentation
+build/
+coverage/
+.angular/
+.husky/
+.vscode/
+dist/
+node_modules/
+documentation/
