--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,6 @@
 {
-  "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "bracketSameLine": true,
-  "printWidth": 120,
-  "proseWrap": "preserve",
-  "bracketSpacing": false,
-  "arrowParens": "always"
+  "printWidth": 120
 }
