--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.26.0",
+  "version": "0.27.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -116,8 +116,10 @@
     "@angular/localize": "^17.3.11",
     "@eslint/compat": "^1.1.0",
     "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
+    "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
@@ -152,6 +154,7 @@
     "prettier": "3.3.2",
     "three": "^0.165.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1",
     "unique-names-generator": "^4.7.1",
     "uuid": "^10.0.0"
   }
