--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.27.0",
+  "version": "0.29.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -25,6 +25,7 @@
     "kill-ng-serve": "killall \"ng serve\"",
     "kill-port-usage-4200": "kill -s 9 `lsof -nP -iTCP:4200 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
     "kill-port-usage-8080": "kill -s 9 `lsof -nP -iTCP:8080 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
+    "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
     "podman:build": "podman build -t 3d-inventory:0.1 .",
@@ -35,9 +36,7 @@
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm-check-updates -u && npm update && npm upgrade",
-    "a": " eslint --report-unused-disable-directives --config eslint.config.js --fix src",
-    "lint": "ng lint"
+    "update": "npm-check-updates -u && npm update && npm upgrade"
   },
   "husky": {
     "hooks": {
@@ -68,7 +67,8 @@
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "@types/lodash": "^4.17.5",
+    "@types/lodash": "^4.17.6",
+    "@types/mongodb": "^4.0.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chalk": "^5.3.0",
@@ -85,6 +85,7 @@
     "karma-typescript": "^5.5.4",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
+    "mongodb": "^6.8.0",
     "nav-bar": "^1.0.3",
     "ngx-bootstrap": "^12.0.0",
     "ngx-markdown": "^17.0.0",
@@ -97,7 +98,7 @@
     "process": "^0.11.10",
     "rimraf": "^5.0.7",
     "rxjs": "~7.8.1",
-    "three": "^0.165.0",
+    "three": "^0.166.0",
     "three-orbitcontrols-ts": "^0.1.2",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.3",
@@ -119,27 +120,27 @@
     "@eslint/js": "^9.5.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
-    "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.30",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.9",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.165.0",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "angular-cli-ghpages": "^2.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^15.4.0",
+    "globals": "^15.6.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-coverage": "~2.2.1",
@@ -152,9 +153,9 @@
     "ng-packagr": "^17.0.0",
     "nyc": "^17.0.0",
     "prettier": "3.3.2",
-    "three": "^0.165.0",
+    "three": "^0.166.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.1",
+    "typescript-eslint": "^7.14.1",
     "unique-names-generator": "^4.7.1",
     "uuid": "^10.0.0"
   }
