--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.29.0",
+  "version": "0.30.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -36,7 +36,8 @@
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm-check-updates -u && npm update && npm upgrade"
+    "update": "npm-check-updates -u && npm update && npm upgrade",
+    "watch": "ng serve --watch"
   },
   "husky": {
     "hooks": {
@@ -132,7 +133,7 @@
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.4",
-    "@types/three": "^0.165.0",
+    "@types/three": "^0.166.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
