--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,53 +1,61 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 6
+  "build": {
+    "builder": "@angular-devkit/build-angular:browser",
+    "options": {
+      "allowedCommonJsDependencies": [
+        "lodash"
+      ]
+    }
   },
-  "root": true,
   "ignorePatterns": [
-    "node_modules/**/*",
-    "documentation/**/*",
+    "./node_modules/**/*",
+    "./documentation/**/*",
     ".git/**/*",
-    "dist/**/*"
+    "./dist/**/*"
   ],
   "overrides": [
     {
-      "files": [
-        "./**/*.ts"
-      ],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
+      "files": [
+        "./src/*.ts"
+      ],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "app",
-            "style": "camelCase"
-          }
-        ],
         "@angular-eslint/component-selector": [
           "error",
           {
-            "type": "element",
             "prefix": "app",
-            "style": "kebab-case"
+            "style": "kebab-case",
+            "type": "element"
+          }
+        ],
+        "@angular-eslint/directive-selector": [
+          "error",
+          {
+            "prefix": "app",
+            "style": "camelCase",
+            "type": "attribute"
           }
         ]
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility"
       ],
+      "files": [
+        "./src/*.html"
+      ],
       "rules": {}
     }
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": 6
+  },
+  "root": true
 }
