--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,6 @@
             "outputPath": "dist/3d-inventory-angular-ui/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -112,10 +111,6 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
@@ -157,7 +152,7 @@
     }
   },
   "cli": {
-    "analytics": false,
+    "analytics": "5eb5f275-1cef-4565-aeac-442bad6845a0",
     "cache": {
       "enabled": false
     },
