--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.30.0",
+  "version": "0.31.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -36,7 +36,8 @@
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm-check-updates -u && npm update && npm upgrade",
+    "upgrade:full": "npm-check-updates -u && npm update && npm upgrade",
+    "prewatch": "npm --no-git-tag-version version patch",
     "watch": "ng serve --watch"
   },
   "husky": {
@@ -69,9 +70,9 @@
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@types/lodash": "^4.17.6",
-    "@types/mongodb": "^4.0.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "browserify-zlib": "^0.2.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -99,8 +100,12 @@
     "process": "^0.11.10",
     "rimraf": "^5.0.7",
     "rxjs": "~7.8.1",
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
     "three": "^0.166.0",
     "three-orbitcontrols-ts": "^0.1.2",
+    "timers": "^0.1.1",
+    "timers-browserify": "^2.0.12",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.3",
     "winston": "^3.13.0",
@@ -121,8 +126,8 @@
     "@eslint/js": "^9.5.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.30",
@@ -141,16 +146,14 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^15.6.0",
+    "globals": "^15.7.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^17.0.0",
-    "lil-gui": "^0.19.2",
     "lint-staged": "^15.2.7",
-    "lite-server": "^2.6.1",
     "ng-packagr": "^17.0.0",
     "nyc": "^17.0.0",
     "prettier": "3.3.2",
