--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.31.0",
+  "version": "0.32.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -12,10 +12,7 @@
   "scripts": {
     "api": "cd ../3d-inventory-mongo-api && npm run start",
     "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui",
-    "clear:all": "npm run clear:cache && npm run clear:dist && npm run clear:node_install",
-    "clear:cache": "rm -rf .angular/cache",
-    "clear:dist": "rm -rf dist",
-    "clear:node_install": "rm -rf node_modules",
+    "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
@@ -28,6 +25,7 @@
     "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
+    "nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "podman:build": "podman build -t 3d-inventory:0.1 .",
     "podman:clear": "podman rmi --all --force",
     "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
@@ -35,10 +33,8 @@
     "pre-commit": "lint-staged",
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
-    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "upgrade:full": "npm-check-updates -u && npm update && npm upgrade",
-    "prewatch": "npm --no-git-tag-version version patch",
-    "watch": "ng serve --watch"
+    "upgrade-full": "npm-check-updates -u && npm update && npm upgrade",
+    "watch": "npm --no-git-tag-version version patch && ng serve --watch"
   },
   "husky": {
     "hooks": {
@@ -57,15 +53,15 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^17.3.11",
-    "@angular/common": "^17.3.11",
-    "@angular/compiler": "^17.3.11",
-    "@angular/core": "^17.3.11",
-    "@angular/forms": "^17.3.11",
-    "@angular/platform-browser": "^17.3.11",
-    "@angular/platform-browser-dynamic": "^17.3.11",
-    "@angular/platform-server": "^17.3.11",
-    "@angular/router": "^17.3.11",
+    "@angular/animations": "^17.0.0",
+    "@angular/common": "^17.0.0",
+    "@angular/compiler": "^17.0.0",
+    "@angular/core": "^17.0.0",
+    "@angular/forms": "^17.0.0",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/platform-server": "^17.0.0",
+    "@angular/router": "^17.0.0",
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
@@ -73,6 +69,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "browserify-zlib": "^0.2.0",
+    "bson": "^6.8.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -83,13 +80,9 @@
     "install": "^0.13.0",
     "jquery": "^3.7.1",
     "jsdom": "^24.1.0",
-    "karma-cli": "^2.0.0",
-    "karma-typescript": "^5.5.4",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
-    "mongodb": "^6.8.0",
     "nav-bar": "^1.0.3",
-    "ngx-bootstrap": "^12.0.0",
     "ngx-markdown": "^17.0.0",
     "ngx-pagination": "^6.0.3",
     "node-gyp": "^10.1.0",
@@ -112,15 +105,16 @@
     "zone.js": "^0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular-eslint/builder": "17.5.2",
-    "@angular-eslint/eslint-plugin": "^17.5.2",
-    "@angular-eslint/eslint-plugin-template": "^17.5.2",
-    "@angular-eslint/schematics": "17.5.2",
-    "@angular-eslint/template-parser": "17.5.2",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.11",
-    "@angular/localize": "^17.3.11",
+    "@angular-builders/custom-webpack": "^17.0.2",
+    "@angular-devkit/build-angular": "^17.0.6",
+    "@angular-eslint/builder": "^17.0.0",
+    "@angular-eslint/eslint-plugin": "^17.0.0",
+    "@angular-eslint/eslint-plugin-template": "^17.0.0",
+    "@angular-eslint/schematics": "^17.0.0",
+    "@angular-eslint/template-parser": "^17.0.0",
+    "@angular/cli": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
+    "@angular/localize": "^17.0.0",
     "@eslint/compat": "^1.1.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.5.0",
@@ -140,8 +134,8 @@
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.166.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "angular-cli-ghpages": "^2.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
