--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,7 @@
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "printWidth": 120
+  "printWidth": 120,
+  "trailingComma": "all",
+  "bracketSameLine": true
 }
