--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "outputPath": "dist/3d-inventory-angular-ui/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -88,7 +89,7 @@
           "defaultConfiguration": "development"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "buildTarget": "3d-inventory-angular-ui:build:development"
           },
