--- a/angular.json
+++ b/angular.json
@@ -20,15 +20,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/3d-inventory-angular-ui/browser",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.json",
+            "outputPath": "dist",
+            "index": "./src/index.html",
+            "main": "./src/main.ts",
+            "polyfills": "./src/polyfills.ts",
+            "tsConfig": "./tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets/favicon/favicon.ico",
-              "src/assets",
+              "./src/assets/favicon/favicon.ico",
+              "./src/assets",
               {
                 "glob": "*.svg",
                 "input": "./node_modules/bootstrap-icons/",
@@ -36,15 +36,15 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-              "node_modules/prismjs/themes/prism-okaidia.css"
+              "./src/styles.scss",
+              "./node_modules/bootstrap/scss/bootstrap.scss",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              "./node_modules/prismjs/themes/prism-okaidia.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
-              "node_modules/marked/marked.min.js",
-              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "./node_modules/marked/marked.min.js",
+              "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
             ]
           },
           "configurations": {
@@ -63,8 +63,8 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "./src/environments/environment.ts",
+                  "with": "./src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
@@ -91,7 +91,8 @@
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "buildTarget": "3d-inventory-angular-ui:build:development"
+            "buildTarget": "3d-inventory-angular-ui:build:development",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -116,8 +117,8 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
+              "./src/favicon.ico",
+              "./src/assets",
               {
                 "glob": "*.svg",
                 "input": "./node_modules/bootstrap-icons/",
@@ -125,15 +126,15 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-              "node_modules/prismjs/themes/prism-okaidia.css"
+              "./src/styles.scss",
+              "./node_modules/bootstrap/scss/bootstrap.scss",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              "./node_modules/prismjs/themes/prism-okaidia.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
-              "node_modules/marked/marked.min.js",
-              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "./node_modules/marked/marked.min.js",
+              "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
             ]
           }
         },
@@ -144,8 +145,8 @@
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
+              "./src/**/*.ts",
+              "./src/**/*.html"
             ]
           }
         }
