--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.33.0",
+  "version": "0.34.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -13,7 +13,7 @@
     "api": "cd ../3d-inventory-mongo-api && npm run start",
     "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
-    "compodoc": "compodoc -p tsconfig.doc.json",
+    "compodoc": "npx compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
     "cp": "cp -f README.md src/assets",
@@ -65,6 +65,7 @@
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@octokit/core": "^6.1.2",
     "@types/lodash": "^4.17.6",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -74,7 +75,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "depcheck": "^1.4.7",
-    "eslint-scope": "^8.0.1",
+    "eslint-scope": "^8.0.2",
     "express": "^4.19.2",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
@@ -85,9 +86,10 @@
     "nav-bar": "^1.0.3",
     "ngx-markdown": "^17.0.0",
     "ngx-pagination": "^6.0.3",
-    "node-gyp": "^10.1.0",
+    "node-gyp": "^10.2.0",
     "node-sass": "^9.0.0",
     "npm-check-updates": "^16.14.20",
+    "octokit": "^4.0.2",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
     "process": "^0.11.10",
@@ -95,13 +97,13 @@
     "rxjs": "~7.8.1",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
-    "three": "^0.166.0",
+    "three": "^0.166.1",
     "three-orbitcontrols-ts": "^0.1.2",
     "timers": "^0.1.1",
     "timers-browserify": "^2.0.12",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.3",
-    "winston": "^3.13.0",
+    "winston": "^3.13.1",
     "zone.js": "^0.14.7"
   },
   "devDependencies": {
@@ -115,9 +117,9 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/localize": "^17.0.0",
-    "@eslint/compat": "^1.1.0",
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.7.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
     "@types/eslint__js": "^8.42.3",
@@ -128,19 +130,19 @@
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.166.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "angular-cli-ghpages": "^2.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^15.7.0",
+    "globals": "^15.8.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-coverage": "~2.2.1",
@@ -150,10 +152,10 @@
     "lint-staged": "^15.2.7",
     "ng-packagr": "^17.0.0",
     "nyc": "^17.0.0",
-    "prettier": "3.3.2",
-    "three": "^0.166.0",
+    "prettier": "3.3.3",
+    "three": "^0.166.1",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.14.1",
+    "typescript-eslint": "^7.16.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^10.0.0"
   }
