Refactor project to use '3D' instead of 'Cube': Update project to use '3D' instead of 'Cube' in Angular components, URLs, and routing to better align with project focus on 3D inventory visualization. (#123)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.36.0",
+  "version": "0.37.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -19,7 +19,7 @@
     "cp": "cp -f README.md src/assets",
     "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
     "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
-    "kill-ng-serve": "killall \"ng serve\"",
+    "kill-ng-serve": "killall -w -v \"ng serve\"",
     "kill-port-usage-4200": "kill -s 9 `lsof -nP -iTCP:4200 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
     "kill-port-usage-8080": "kill -s 9 `lsof -nP -iTCP:8080 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
     "lint": "ng lint",
@@ -31,6 +31,7 @@
     "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
     "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
     "pre-commit": "lint-staged",
+    "prestart": "(fuser -n tcp -k 4200)&",
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "ng test",
     "upgrade-full": "npm-check-updates -u && npm update && npm upgrade",
@@ -123,8 +124,8 @@
     "@eslint/js": "^9.7.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
-    "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.30",
