--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.37.0",
+  "version": "0.37.6",
   "private": true,
   "browser": {
     "fs": false,
@@ -33,7 +33,7 @@
     "pre-commit": "lint-staged",
     "prestart": "(fuser -n tcp -k 4200)&",
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
-    "test": "ng test",
+    "test": "jest",
     "upgrade-full": "npm-check-updates -u && npm update && npm upgrade",
     "watch": "npm --no-git-tag-version version patch && ng serve --watch"
   },
@@ -67,7 +67,7 @@
     "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@octokit/core": "^6.1.2",
-    "@types/lodash": "^4.17.6",
+    "@types/lodash": "^4.17.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "browserify-zlib": "^0.2.0",
@@ -80,8 +80,10 @@
     "express": "^4.19.2",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
+    "jest-runner-eslint": "^2.2.0",
+    "jest-runner-prettier": "^1.0.0",
     "jquery": "^3.7.1",
-    "jsdom": "^24.1.0",
+    "jsdom": "^24.1.1",
     "lodash": "^4.17.21",
     "marked": "^12.0.2",
     "mkdirp": "^3.0.1",
@@ -103,6 +105,7 @@
     "three-orbitcontrols-ts": "^0.1.2",
     "timers": "^0.1.1",
     "timers-browserify": "^2.0.12",
+    "ts-jest": "^29.2.3",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.3",
     "winston": "^3.13.1",
@@ -124,28 +127,29 @@
     "@eslint/js": "^9.7.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.30",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.11",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.166.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "angular-cli-ghpages": "^2.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "11.1.0",
     "globals": "^15.8.0",
-    "jasmine-core": "~5.1.2",
+    "jasmine-core": "~5.2.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.3",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
@@ -157,7 +161,7 @@
     "prettier": "3.3.3",
     "three": "^0.166.1",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.16.0",
+    "typescript-eslint": "^7.17.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^10.0.0"
   }
